--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     },
     "devDependencies": {
         "axios": "^1.1.2",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^0.7.5",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "bulma": "^1.0.2"
     }
 }
