poppins, site wide font

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@fontsource/poppins": "^5.1.0",
         "bulma": "^1.0.2"
     }
 }
